[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Materials/ui_icon.tres" type="Material" id=1]
[ext_resource path="res://UI/ShopEntry.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/gold.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/TreasureFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/ShopEntryFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Shader/energy_crystal_ui.gdshader" type="Shader" id=6]
[ext_resource path="res://Assets/Sprites/gear.png" type="Texture" id=7]

[sub_resource type="Theme" id=4]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )
shader_param/fill_color = Color( 1, 1, 1, 1 )
shader_param/empty_color = Color( 0.588235, 0.588235, 0.588235, 1 )
shader_param/enabled = null
shader_param/texture_resource = ExtResource( 7 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform sampler2D texture_resource;

void fragment(){
	COLOR = texture(texture_resource, UV);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/texture_resource = ExtResource( 3 )

[node name="ShopEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 428.0
margin_top = 236.0
margin_right = 596.0
margin_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 50.0
mouse_filter = 2

[node name="Image" type="ColorRect" parent="Panel/CenterContainer/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
material = ExtResource( 1 )
margin_left = 59.0
margin_right = 109.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 168.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 5 )
text = "GREAT UPGRADE BUY NOW"

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 168.0
margin_bottom = 127.0

[node name="Cost" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 19.0
margin_right = 149.0
margin_bottom = 51.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
margin_right = 26.0
margin_bottom = 51.0
mouse_filter = 1

[node name="GearIcon" type="ColorRect" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost/AspectRatioContainer"]
modulate = Color( 0.172549, 0.133333, 0.133333, 1 )
material = SubResource( 5 )
margin_top = 12.5
margin_right = 26.0
margin_bottom = 38.5
rect_min_size = Vector2( 26, 26 )
mouse_filter = 1

[node name="GearAmount" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
unique_name_in_owner = true
margin_left = 30.0
margin_right = 53.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"

[node name="Gap" type="Control" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
unique_name_in_owner = true
margin_left = 57.0
margin_right = 73.0
margin_bottom = 51.0
rect_min_size = Vector2( 16, 0 )

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
margin_left = 77.0
margin_right = 103.0
margin_bottom = 51.0
mouse_filter = 1

[node name="GoldIcon" type="ColorRect" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost/AspectRatioContainer2"]
modulate = Color( 0.729412, 0.635294, 0.196078, 1 )
material = SubResource( 2 )
margin_top = 12.5
margin_right = 26.0
margin_bottom = 38.5
rect_min_size = Vector2( 26, 26 )
mouse_filter = 1

[node name="GoldAmount" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
unique_name_in_owner = true
margin_left = 107.0
margin_right = 130.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "2"

[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
